refactor: experimental change of the design of the AasBackend + CrudAasRepository